<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradientlogin"
    tools:context=".Fragmente.Logare"

    android:id="@+id/logarelinear">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrolllogare"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:id="@+id/linearlinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/loga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:src="@drawable/logoa"
                android:contentDescription="@string/close"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10sp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:autofillHints="@string/email"
                tools:targetApi="o"
                android:padding="20sp"
                android:textColor="@color/alb"
                android:textColorHint="@color/alb"
                android:id="@+id/emaillogare" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/logareparola"
                android:drawableStart="@drawable/lacat"
                android:drawablePadding="10sp"
                android:ems="10"
                android:hint="@string/parola"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="20sp"
                android:autofillHints="@string/parola"
                tools:targetApi="o"
                android:textColor="@color/alb"
                android:textColorHint="@color/alb" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/alb"
                android:paddingStart="30sp"
                android:text="@string/checklogare"
                android:textColor="@color/alb" />

            <ProgressBar
                android:id="@+id/progresslogin"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/logarebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/buton_login"
                android:text="@string/logare"
                android:textSize="20sp" />

            <Button
                android:id="@+id/inregistarebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:background="@drawable/buton_login"
                android:text="@string/inregistrare"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:id="@+id/recuperare_parola"
                android:layout_marginTop="24sp"
                android:background="@drawable/buton_login"
                android:text="@string/recuperare_parola"
                android:layout_gravity="center"
                android:layout_marginEnd="20sp"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>