<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradientlogin"
    tools:context=".Interfete.Inregistrare"
    android:id="@+id/inregistarelinear"
    android:orientation="vertical"
    android:gravity="center">

        <EditText

            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/name"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/nume"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"
            android:autofillHints="@string/nume"
            tools:targetApi="o"
            android:textColor="@color/alb"
            android:textColorHint="@color/alb"
            android:id="@+id/numeinregistrare"
           />

        <EditText
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/name"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/prenume"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"
            android:autofillHints="@string/nume"
            tools:targetApi="o"
            android:textColor="@color/alb"
            android:textColorHint="@color/alb"
            android:id="@+id/prenumeinregistrare"/>

        <EditText
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/username"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/alb"
            android:textColorHint="@color/alb"
            android:id="@+id/usernameinregistare"
            android:inputType=""
            android:autofillHints="" tools:targetApi="o" />

        <ProgressBar
            android:id="@+id/progressBara"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/lacat"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/parola"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="20dp"
            android:autofillHints="@string/nume"
            tools:targetApi="o"
            android:textColor="@color/alb"
            android:textColorHint="@color/alb"
            android:id="@+id/parolainregistare"
            />

        <EditText
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/lacat"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/verificareparola"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="20dp"
            android:autofillHints="@string/nume"
            tools:targetApi="o"
            android:textColor="@color/alb"
            android:textColorHint="@color/alb"
            android:id="@+id/verificareparola"/>
        <EditText
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="20dp"
            android:autofillHints="@string/nume"
            tools:targetApi="o"
            android:textColor="@color/alb"
            android:textColorHint="@color/alb"
            android:id="@+id/emailinregistare"
            />
        <Button
            android:id="@+id/inregistarebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/buton_login"
            android:text="@string/inregistrare"
            android:textSize="20sp" />

    </LinearLayout>




