<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Interfete.Profil"
    android:background="@drawable/gradientbutondashboard"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8"
      >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/profil1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".4"
        android:layout_height="match_parent"
        android:orientation="horizontal"


        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@drawable/borduri"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="40dp"
                android:text="@string/nume"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"

                android:paddingBottom="10dp"
                android:background="@drawable/margini"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prenume"
                android:textSize="20sp"
                android:paddingTop="25dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"

                android:background="@drawable/margini"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:paddingTop="25dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"

                android:background="@drawable/margini"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plati_de_efectuat"
                android:textSize="20sp"
                android:paddingTop="25dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"

                android:background="@drawable/margini"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nr_de_autoturisme"
                android:textSize="20sp"
                android:paddingTop="25dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@drawable/borduri"

            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="40dp"
                android:textSize="20sp"
                android:id="@+id/numeeeeutilizator"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"

                android:background="@drawable/margini"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prenume"
                android:textSize="20sp"
                android:paddingTop="25dp"
                android:gravity="center"
                android:id="@+id/prenumeutilizator"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"
                android:paddingBottom="10dp"
                android:background="@drawable/margini"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:lines="1"
                android:paddingTop="25dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:id="@+id/emailtilizator"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"

                android:background="@drawable/margini"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plati_de_efectuat"
                android:textSize="20sp"
                android:paddingTop="25dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:id="@+id/totalplati"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic"


                android:background="@drawable/margini"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nr_de_autoturisme"
                android:textSize="20sp"
                android:paddingTop="25dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:id="@+id/totalauto"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </LinearLayout>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/inchidere_cont"
    android:layout_gravity="center"
    android:textColor="@color/alb"
    android:background="@drawable/locatie_buton"
    android:id="@+id/inchiderecont"
    android:textStyle="bold|italic"

    />

</LinearLayout>